--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <link href="./resources/css/reset.css" rel="stylesheet" type="text/css">
+   <link href="./resources/css/index.css" rel="stylesheet" type="text/css">
+   <title>Colmar Acadamy</title>
+</head>
+<body>
+  <div class="header">
+     <div class="logosection">
+        <img src="./resources/images/ic-logo.svg">
+        <p class="logotext">Colmar</p><p class="logotext2">Acadamy</p>
+     </div>
+     <div class="headernav">
+       <a>On Campus</a>
+       <a>Online</a>
+       <a>Our companies</a>
+       <a>Sign in</a>
+    </div>
+  </div>
+  <div class="introsection">
+       <div class="bannerimage">
+      </div>
+      <div class="introcontent">
+         <p>Learn something new everyday</p>
+         <p> Lorem ipsum dolor sit amet, consectetur apipiscing elit.</p>
+         <div class="startbutton">
+           <p class="starttext">Start here</p>
+         </div>
+      </div>
 
+  </div>
+
+
+
+</body>
+<foter>
+</footer>
+</html>
