--- a/index.html
+++ b/index.html
@@ -22,13 +22,36 @@
        <div class="bannerimage">
       </div>
       <div class="introcontent">
-         <p>Learn something new everyday</p>
-         <p> Lorem ipsum dolor sit amet, consectetur apipiscing elit.</p>
+         <p id="textformat1">Learn something new everyday</p>
+         <p id="textformat2"> Lorem ipsum dolor sit amet, consectetur apipiscing elit.</p>
          <div class="startbutton">
            <p class="starttext">Start here</p>
          </div>
       </div>
-
+  </div>
+  <div class="infosection">
+     <div class="leftside">
+       <div class="infomainimage">
+       </div>
+       <p>It doesn't hurt to keep practicing</p>
+       <p>
+          "Curabitur vitae libero in ipsum porttitor consequat. aliquam et
+          commondo lectus nec consequat neque. Sed non accumasan urna. Phasellus
+          sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+          tristique ligula."
+        </p>
+        <p>Emanuel, Sr Strategist at hiring.com</p>
+     </div>
+     <div class="rightside">
+        <div class="infosectioncontent">
+          <div class="infocontentbox">
+          </div>
+          <div class="infocontentbox">
+          </div>
+          <div class="infocontentbox">
+          </div>
+      </div>
+    </div>
   </div>
 
 
