--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
    <link href="./resources/css/reset.css" rel="stylesheet" type="text/css">
    <link href="./resources/css/index.css" rel="stylesheet" type="text/css">
-   <title>Colmar Acadamy</title>
+   <title>COLMAR ACADEMY</title>
 </head>
 <body>
   <div class="header">
      <div class="logosection">
         <img src="./resources/images/ic-logo.svg">
-        <p class="logotext">Colmar</p><p class="logotext2">Acadamy</p>
+        <p class="logotext">COLMAR</p><p class="logotext2">ACADEMY</p>
      </div>
      <div class="headernav">
        <a>On Campus</a>
@@ -22,8 +22,8 @@
        <div class="bannerimage">
       </div>
       <div class="introcontent">
-         <p id="textformat1">Learn something new everyday</p>
-         <p id="textformat2"> Lorem ipsum dolor sit amet, consectetur apipiscing elit.</p>
+         <p class="textformat1">Learn something new everyday</p>
+         <p class="textformat2"> Lorem ipsum dolor sit amet, consectetur apipiscing elit.</p>
          <div class="startbutton">
            <p class="starttext">Start here</p>
          </div>
@@ -33,29 +33,48 @@
      <div class="leftside">
        <div class="infomainimage">
        </div>
-       <p>It doesn't hurt to keep practicing</p>
-       <p>
-          "Curabitur vitae libero in ipsum porttitor consequat. aliquam et
-          commondo lectus nec consequat neque. Sed non accumasan urna. Phasellus
-          sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
-          tristique ligula."
-        </p>
-        <p>Emanuel, Sr Strategist at hiring.com</p>
+       <div class="leftsidetext">
+           <p class="textformat3">It doesn't hurt to keep practicing</p>
+           <p>
+              "Curabitur vitae libero in ipsum porttitor consequat. aliquam et
+              commondo lectus nec consequat neque. Sed non accumasan urna. Phasellus
+              sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+              tristique ligula."
+            </p>
+            <br>
+            <br>
+            <p>Emanuel, Sr Strategist at hiring.com</p>
+      </div>
      </div>
      <div class="rightside">
         <div class="infosectioncontent">
-          <div class="infocontentbox">
+          <div class="infocontentbox" id="bottomborder">
+             <img class="infoimageformat" src="./resources/images/information-orientation.jpg">
+             <div class="infoboxtext">
+               <p class="textformat4">Orientation date</p>
+               <p>Tue 10/11 & Wed 10/12: 8am-3pm<p>
+               <p id="bluetext">Read more</p>
+           </div>
           </div>
-          <div class="infocontentbox">
+          <div class="infocontentbox" id="topborder">
+             <img class="infoimageformat" src="./resources/images/information-campus.jpg">
+             <div class="infoboxtext">
+               <p class="textformat4">Our campus</p>
+               <p>find which campus is close by you</p>
+               <p id="bluetext">Read more</p>
+             </div>
           </div>
-          <div class="infocontentbox">
+          <div class="infocontentbox"  id="greybackground">
+              <img class="infoimageformat" src="./resources/images/information-guest-lecture.jpg">
+              <div class="infoboxtext">
+                 <p class="textformat4">Our guest lecture</p>
+                 <p>join a keynote with Oliver Sack about music in medical treatment</p>
+                 <p id="bluetext">Read more</p>
+              </div>
           </div>
       </div>
     </div>
   </div>
-
-
-
 </body>
 <foter>
 </footer>
