--- a/index.html
+++ b/index.html
@@ -75,6 +75,67 @@
       </div>
     </div>
   </div>
+  <div class="learningsection">
+    <p>Start learning</p>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <P>Software engineering</p>
+          <p>COURSES</p>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+       </div>
+    </div>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <p>Computer art</p>
+          <p>COURSES</p>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects</p>
+       </div>
+    </div>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <p>Design</p>
+          <p>COURSES</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+       </div>
+    </div>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <p>Data</p>
+          <p>COURSES</p>
+         <p>Data Science, Big Data, SQL, Data Visualization</p>
+       </div>
+    </div>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <p>Business</p>
+          <p>COURSES</p>
+          <p>Product Development, Business Development, Startup</p>
+       </div>
+    </div>
+    <div class="coursecontainer">
+       <div>
+       </div>
+       <div>
+          <p>Marketing</p>
+          <p>COURSES</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+       </div>
+    </div>
+
+    </div>
+
+
+  </div>
 </body>
 <foter>
 </footer>
