--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
             <br>
             <br>
-            <p>Emanuel, Sr Strategist at hiring.com</p>
+            <p class="endtextformat">Emanuel, Sr Strategist at hiring.com</p>
       </div>
      </div>
      <div class="rightside">
@@ -76,67 +76,115 @@
     </div>
   </div>
   <div class="learningsection">
-    <p>Start learning</p>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <P>Software engineering</p>
-          <p>COURSES</p>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
+    <p class="learningtitle">Start learning</p>
+      <div class="courses">
+        <div class="leftcolumn">
+            <div class="coursecontainer">
+               <div class="softwareengineeringpic">
+               </div>
+               <div class="coursetext">
+                  <P class="textformat4">Software engineering</p>
+                  <p>COURSES</p>
+                  <p>Web Development, Mobile Development, iOT, APIs</p>
+               </div>
+            </div>
+            <div class="coursecontainer">
+               <div class="datapic">
+               </div>
+               <div class="coursetext">
+                  <p class="textformat4">Data</p>
+                  <p>COURSES</p>
+                 <p>Data Science, Big Data, SQL, Data Visualization</p>
+               </div>
+            </div>
+        </div>
+        <div class="middlecolumn">
+            <div class="coursecontainer">
+               <div class="computerartpic">
+               </div>
+               <div class="coursetext">
+                  <p class="textformat4">Computer art</p>
+                  <p>COURSES</p>
+                  <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects</p>
+               </div>
+            </div>
+            <div class="coursecontainer">
+               <div class="businesspic">
+               </div>
+               <div class="coursetext">
+                  <p class="textformat4">Business</p>
+                  <p>COURSES</p>
+                  <p>Product Development, Business Development, Startup</p>
+               </div>
+            </div>
+        </div>
+        <div class="rightcolumn">
+            <div class="coursecontainer">
+               <div class="designpic">
+               </div>
+               <div class="coursetext">
+                  <p class="textformat4">Design</p>
+                  <p>COURSES</p>
+                  <p>User Experience Design, User Research, Visual Design</p>
+               </div>
+            </div>
+            <div class="coursecontainer">
+               <div class="marketingpic">
+               </div>
+               <div class="coursetext">
+                  <p class="textformat4">Marketing</p>
+                  <p>COURSES</p>
+                  <p>Analytics, Content Marketing, Mobile Marketing</p>
+               </div>
+            </div>
+         </div>
        </div>
     </div>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <p>Computer art</p>
-          <p>COURSES</p>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects</p>
-       </div>
-    </div>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <p>Design</p>
-          <p>COURSES</p>
-          <p>User Experience Design, User Research, Visual Design</p>
-       </div>
-    </div>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <p>Data</p>
-          <p>COURSES</p>
-         <p>Data Science, Big Data, SQL, Data Visualization</p>
-       </div>
-    </div>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <p>Business</p>
-          <p>COURSES</p>
-          <p>Product Development, Business Development, Startup</p>
-       </div>
-    </div>
-    <div class="coursecontainer">
-       <div>
-       </div>
-       <div>
-          <p>Marketing</p>
-          <p>COURSES</p>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
-       </div>
-    </div>
+    <div class="thesissection">
+      <p class="thesistitle">Thesis Exhibit</p>
+       <div class="thesis">
+        <div class="thesislefttside">
+          <div class="videoformat">
+            <video controls autoplay loop width="662px" height="404px">
+               <source src="./resources/videos/thesis.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="thesistextformat">
+              <p class="textformat5">Reimagine urban</p>
+              <p id="custompadding">"Curabitur vitae libero in ipsum porttitor consequat. aliquam
+                   et commondo lectus, nec consequat neque. Sed non accumasan urna.
+                  Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor
+                  consequat, tristique ligula"
+              </p>
+        </div>
+        </div>
+        <div class="thesisrightside">
+          <div class="infocontentbox" id="greybackground">
+              <img class="infoimageformat" src="./resources/images/thesis-fisma.jpg">
+              <div class="infoboxtext">
+                 <p class="textformat4">Fisma: Design and Prototype</p>
+                 <p>Designer showcase of new prototype Product</p>
 
+              </div>
+          </div>
+          <div class="infocontentbox" >
+              <img class="infoimageformat" src="./resources/images/thesis-now-and-then.jpg">
+              <div class="infoboxtext">
+                 <p class="textformat4">Now and then</p>
+                 <p>Reseach study about New York</p>
+              </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-
-  </div>
+    <div class="footersection">
+          <P class="trademarkformatting">© 2016 colmar Academy. All rights reserved</p>
+       <div class="footernav">
+          <a>Term</a>
+          <a>privacy</a>
+       </div>
+    </div>
 </body>
-<foter>
+<footer>
 </footer>
 </html>
