--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
    <title>COLMAR ACADEMY</title>
 </head>
 <body>
+
+  <!--logo -->
+
   <div class="header">
      <div class="logosection">
         <img src="./resources/images/ic-logo.svg">
         <p class="logotext">COLMAR</p><p class="logotext2">ACADEMY</p>
      </div>
+
+<!--navigation menu-->
+
      <div class="headernav">
        <a>On Campus</a>
        <a>Online</a>
        <a>Our companies</a>
        <a>Sign in</a>
     </div>
+
+<!--mobile navigation menu-->
+
+    <div class="mobilenav">
+        <img class="mobilepicturemove" src="./resources/images/ic-logo.svg">
+        <img class="mobilepicturemove" src="./resources/images/ic-on-campus.svg">
+        <img class="mobilepicturemove" src="./resources/images/ic-online.svg">
+        <img class="mobilepicturemove" src="./resources/images/ic-login.svg">
+    </div>
   </div>
+
+<!--introduction section-->
+
   <div class="introsection">
        <div class="bannerimage">
       </div>
@@ -29,6 +47,9 @@
          </div>
       </div>
   </div>
+
+  <!--information section-->
+
   <div class="infosection">
      <div class="leftside">
        <div class="infomainimage">
@@ -46,10 +67,12 @@
             <p class="endtextformat">Emanuel, Sr Strategist at hiring.com</p>
       </div>
      </div>
+
      <div class="rightside">
         <div class="infosectioncontent">
           <div class="infocontentbox" id="bottomborder">
              <img class="infoimageformat" src="./resources/images/information-orientation.jpg">
+             <img class="mobilepicformat" src="./resources/images/information-orientation-mobile.jpg">
              <div class="infoboxtext">
                <p class="textformat4">Orientation date</p>
                <p>Tue 10/11 & Wed 10/12: 8am-3pm<p>
@@ -58,6 +81,7 @@
           </div>
           <div class="infocontentbox" id="topborder">
              <img class="infoimageformat" src="./resources/images/information-campus.jpg">
+             <img class="mobilepicformat" src="./resources/images/information-campus-mobile.jpg">
              <div class="infoboxtext">
                <p class="textformat4">Our campus</p>
                <p>find which campus is close by you</p>
@@ -66,6 +90,7 @@
           </div>
           <div class="infocontentbox"  id="greybackground">
               <img class="infoimageformat" src="./resources/images/information-guest-lecture.jpg">
+              <img class="mobilepicformat" src="./resources/images/information-guest-lecture-mobile.jpg">
               <div class="infoboxtext">
                  <p class="textformat4">Our guest lecture</p>
                  <p>join a keynote with Oliver Sack about music in medical treatment</p>
@@ -77,6 +102,33 @@
   </div>
   <div class="learningsection">
     <p class="learningtitle">Start learning</p>
+
+
+<!--mobile courses-->
+
+      <div class="coursesmobile">
+        <div class="mobilebutton">
+           <p class="mobilebuttontext">Software Engineering</p>
+        </div>
+        <div class="mobilebutton">
+           <p class="mobilebuttontext">Computer Art</p>
+        </div>
+        <div class="mobilebutton">
+           <p class="mobilebuttontext"> Design</p>
+        </div>
+        <div class="mobilebutton">
+           <p class="mobilebuttontext">Data</p>
+        </div>
+        <div class="mobilebutton">
+           <p class="mobilebuttontext">business</p>
+        </div>
+        <div class="mobilebutton">
+           <p class="mobilebuttontext">Marketing</p>
+        </div>
+      </div>
+
+<!--main site courses-->
+
       <div class="courses">
         <div class="leftcolumn">
             <div class="coursecontainer">
@@ -140,6 +192,8 @@
          </div>
        </div>
     </div>
+
+
     <div class="thesissection">
       <p class="thesistitle">Thesis Exhibit</p>
        <div class="thesis">
